# quadruped_person_follower

./: .gitignore  Dockerfile  README.md  entrypoint.sh  run.sh
ros_msgs/puppy_control/: CMakeLists.txt  package.xml
ros_msgs/sensor/: CMakeLists.txt  package.xml
ros_msgs/sensor/msg/: Led.msg
scripts/: puppy_command.py  puppy_frame_processing.py
scripts/camera_calibration/: camera_calibration.py  camera_params.json  camera_params.npz  pdi_project.py  reprojection_errors.txt  take_chessboard_pictures.py
scripts/data_processing/: COCO_cleaning.py  COCO_filtering.py  dataset_dist_valid.py  hand_landmarks_dataset.py
scripts/model_training/: gesture_classifier_train.py  person_detector_train.py
scripts/puppypi_system/: puppy_ibvs_controller.py  puppy_pov.py
scripts/tests/: hand_gestures_test.py  hand_landmarks_test.py  landmark_extractor.py  undistort_cam_test.py  yolo_model_test.py
