<?xml version="1.0"?>
<package format="2">
  <name>sensor</name>
  <version>0.0.1</version>
  <description>Message definitions mirror for PuppyPi Sensor</description>
  <maintainer email="jonas.orlaineta02@gmail.com">Jonathan Orlaineta</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>